fix word-wrap on small devices

--- a/app/styles/candidate.scss
+++ b/app/styles/candidate.scss
@@ -147,6 +147,13 @@
 		padding: 1em 1.2em;
 	}
 
+	.candidate-proposals,
+	.candidate-answers {
+		@media screen and (max-width: 600px) {
+			word-wrap: break-word;
+		}
+	}
+
 	.answers {
 		font-weight: 700;
 		color: $voto-blue;
